# internal/interfaces/http/news/response.go
@@ -1,8 +1,0 @@
-package http_interfaces_news
-
-type NewsResponse struct {
-	ID          uint    `json:"id"`
-	Name        string  `json:"name"`
-	Price       float64 `json:"price"`
-	Description string  `json:"description"`
-}
